# aoc

./: .gitignore  README.md
2016/: Cargo.toml
2016/src/: lib.rs
2016/src/solutions/: day01_no_time_for_a_taxicab.rs  day02_bathroom_security.rs  day03_squares_with_three_sides.rs  day04_security_through_obscurity.rs  day05_how_about_a_nice_game_of_chess.rs  day06_signals_and_noise.rs  day07_internet_protocol_version_7.rs  day08_two_factor_authentication.rs  day09_explosives_in_cyberspace.rs  day10_balance_bots.rs  day11_radioisotope_thermoelectric_generators.rs  day12_leonardos_monorail.rs  day13_a_maze_of_twisty_little_cubicles.rs  day14_one_time_pad.rs  day15_timing_is_everything.rs  day16_dragon_checksum.rs  day17_two_steps_forward.rs  day18_like_a_rogue.rs  day19_an_elephant_named_joseph.rs  day20_firewall_rules.rs  day21_scrambled_letters_and_hash.rs  day22_grid_computing.rs  day23_safe_cracking.rs  day24_air_duct_spelunking.rs  day25_clock_signal.rs  mod.rs
2018/: Cargo.toml
2018/src/: lib.rs
2018/src/chronal_device/: mod.rs
2018/src/solutions/: day01_chronal_calibration.rs  day02_inventory_management_system.rs  day03_no_matter_how_you_slice_it.rs  day04_repose_record.rs  day05_alchemical_reduction.rs  day06_chronal_coordinates.rs  day07_the_sum_of_its_parts.rs  day08_memory_maneuver.rs  day09_marble_mania.rs  day10_the_stars_align.rs  day11_chronal_charge.rs  day12_subterranean_sustainability.rs  day13_mine_cart_madness.rs  day14_chocolate_charts.rs  day15_beverage_bandits.rs  day16_chronal_classification.rs  day17_reservoir_research.rs  day18_settlers_of_the_north_pole.rs  day19_go_with_the_flow.rs  day20_a_regular_map.rs  day21_chronal_conversion.rs  day22_mode_maze.rs  day23_experimental_emergency_teleportation.rs  day24_immune_system_simulator_20XX.rs  day25_four_dimensional_adventure.rs  mod.rs
2019/: Cargo.toml
2019/src/: lib.rs
2019/src/intcode/: intcode.rs  mod.rs
2019/src/solutions/: day01_the_tyranny_of_the_rocket_equation.rs  day02_1202_program_alarm.rs  day03_crossed_wires.rs  day04_secure_container.rs  day05_sunny_with_a_chance_of_rain.rs  day06_universal_orbit_map.rs  day07_amplification_circuit.rs  day08_space_image_format.rs  day09_sensor_boost.rs  day10_monitoring_station.rs  day11_space_police.rs  day12_the_n_body_problem.rs  day13_care_package.rs  day14_space_stoichiometry.rs  day15_oxygen_system.rs  day16_flawed_frequency_transmission.rs  day17_set_and_forget.rs  day18_many_worlds_interpretation.rs  day19_tractor_beam.rs  day20_donut_maze.rs  day21_springdroid_adventure.rs  day22_slam_shuffle.rs  day23_category_six.rs  day24_planet_of_discord.rs  day25_cryostasis.rs  mod.rs
2019/src/utils/: grid.rs
2020/: Cargo.toml
2020/src/: lib.rs
2020/src/solutions/: day10_adapter_array.rs  day11_seating_system.rs  day12_rain_risk.rs  day13_shuttle_search.rs  day14_docking_data.rs  day15_rambunctious_recitation.rs  day16_ticket_translation.rs  day17_conway_cubes.rs  day18_operation_order.rs  day19_monster_messages.rs  day1_report_repair.rs  day20_jurassic_jigsaw.rs  day21_allergen_assessment.rs  day22_crab_combat.rs  day23_crab_cups.rs  day24_lobby_layout.rs  day25_combo_breaker.rs  day2_password_philosophy.rs  day3_toboggan_trajectory.rs  day4_passport_processing.rs  dayX.rs  mod.rs  (+5 more)
2021/: Cargo.toml
2021/src/: lib.rs
2022/: Cargo.toml  aoc-2022.code-workspace
2022/src/: lib.rs
(+108 files in other folders)
