[package]
name = "aoc-2016"
version = "0.1.0"
authors = ["Will Lunniss <willlunniss@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aoc-runner = "0.3.0"
aoc-runner-derive="0.3.0"
utils = { path = "../utils" }
itertools = "0.10"
rayon = "1.5"
indoc = "1.0"
strum = "0.23"
strum_macros = "0.23"
md5 = "0.7"
pathfinding = "3.0"
bit-iter = "1.1"