[package]
name = "aoc-2018"
version = "0.1.0"
authors = ["Will Lunniss <willlunniss@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aoc-runner = "0.3.0"
aoc-runner-derive="0.3.0"
utils = { path = "../utils" }
lazy_static = "1.4.0"
itertools = "0.10.0"
chrono = "0.4.19"
digits_iterator = "0.1.0"
strum = "0.20"
strum_macros = "0.20"
regex = "1"
z3 = "0.10.0"
