[package]
name = "aoc-2018"
version = "0.1.0"
authors = ["Will Lunniss <willlunniss@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aoc-runner = "0.3.0"
aoc-runner-derive = "0.3.0"
utils = { path = "../utils" }
lazy_static = "1.4"
itertools = "0.10"
chrono = "0.4"
digits_iterator = "0.1"
strum = "0.24"
strum_macros = "0.24"
regex = "1.6"
rayon = "1.5"

[target.'cfg(unix)'.dependencies]
z3 = "0.10"

[target.'cfg(windows)'.dependencies]
z3 = { version = "0.10", features = ["static-link-z3"] }
