[package]
name = "aoc-2019"
version = "0.1.0"
authors = ["Will Lunniss <willlunniss@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aoc-runner = "0.3.0"
aoc-runner-derive = "0.3.0"
utils = { path = "../utils" }
lazy_static = "1.4"
itertools = "0.10"
parse-display = "0.6"
digits_iterator = "0.1"
num = "0.4"
modinverse = "0.1"
