[package]
name = "aoc-2020"
version = "0.1.0"
authors = ["Will Lunniss <willlunniss@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aoc-runner = "0.3.0"
aoc-runner-derive = "0.3.0"
regex = "1.6"
lazy_static = "1.4"
itertools = "0.10"
parse-display = "0.6"
modinverse = "0.1"
