[package]
name = "aoc-2021"
version = "0.1.0"
authors = ["Will Lunniss <willlunniss@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aoc-runner = "0.3"
aoc-runner-derive="0.3"
utils = { path = "../utils" }
itertools = "0.10"
strum = "0.23"
strum_macros = "0.23"
indoc = "1.0"
nalgebra = "0.29"
cached = "0.26"
