[package]
name = "aoc-2022"
version = "0.1.0"
authors = ["Will Lunniss <willlunniss@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aoc-runner = "0.3.0"
aoc-runner-derive = "0.3.0"
utils = { path = "../utils" }
itertools = "0.10"
indoc = "1.0"
reformation = "0.5"
derive_more = "0.99"
lazy_static = "1.4"
strum = "0.24"
strum_macros = "0.24"
